@@ -1,2 +1,2 @@
 @import url("subdir/second.css"); 
-@import "subdir/third.css"
+@import "subdir/third.css";
